--- a/vaadin-crm/frontend/styles/views/main/main-view.css
+++ b/vaadin-crm/frontend/styles/views/main/main-view.css
@@ -42,3 +42,23 @@ vaadin-tab[selected] {
   background-color: var(--lumo-primary-color-10pct);
   color: var(--lumo-primary-text-color);
 }
+/* List view */
+.list-view .content {
+    display: flex; 
+}
+
+.list-view .contact-grid {
+    flex: 2; 
+}
+
+.list-view .contact-form {
+    flex: 1;
+    padding: var(--lumo-space-m);  
+}
+
+@media all and (max-width: 1100px) {  
+    .list-view.editing .toolbar,
+    .list-view.editing .contact-grid {
+        display: none;
+   }
+}
